--- a/AndroidApp/Properties/AndroidManifest.xml
+++ b/AndroidApp/Properties/AndroidManifest.xml
@@ -2,5 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="MvpnTestAndroidApp.MvpnTestAndroidApp">
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.WRITE_PROFILE" />
-	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:usesCleartextTraffic="true"></application>
+	<application 
+        android:icon="@mipmap/icon" 
+        android:label="@string/app_name" 
+        android:allowBackup="false"
+        android:usesCleartextTraffic="false">
+	</application>
 </manifest>
