--- a/XamarinForms/MvpnTestFormsApp/MvpnTestFormsApp.csproj
+++ b/XamarinForms/MvpnTestFormsApp/MvpnTestFormsApp.csproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="Citrix.Xamarin.Forms.MAMSDK" Version="20.11.0.2" />
   </ItemGroup>
 </Project>
+
