Revert "Merge pull request #6 from citrix/develop"
This reverts commit 2f6fa4f8f514d30a4f535e35cbfd024b98d47598, reversing
changes made to 4037f6c5261fdc7d575b417033d591cdcd42112b.

--- a/AndroidApp/Properties/AndroidManifest.xml
+++ b/AndroidApp/Properties/AndroidManifest.xml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="MvpnTestAndroidApp.MvpnTestAndroidApp">
-	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="30" />
+	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.WRITE_PROFILE" />
-	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:usesCleartextTraffic="true"></application>
-	<queries>
-		<package android:name="com.zenprise" />
-		<package android:name="com.citrix.Receiver" />
-	</queries>
+	<application 
+        android:icon="@mipmap/icon" 
+        android:label="@string/app_name" 
+        android:allowBackup="false"
+        android:usesCleartextTraffic="false">
+	</application>
 </manifest>
