--- a/XamarinForms/MvpnTestFormsApp.Android/MvpnTestFormsApp.Android.csproj
+++ b/XamarinForms/MvpnTestFormsApp.Android/MvpnTestFormsApp.Android.csproj
@@ -15,7 +15,7 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
     <AndroidDexTool>d8</AndroidDexTool>
-    <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
-    <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
-    <AndroidSupportedAbis>armeabi-v7a</AndroidSupportedAbis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,19 +55,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XamarinWebViewRenderer.cs" />
-    <Compile Include="Resources\Resource.designer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Citrix.Xamarin.Android.MAMSDK">
-      <Version>21.6.0.1</Version>
+    <PackageReference Include="Citrix.Xamarin.Forms.MAMSDK">
+      <Version>20.11.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms">
-      <Version>4.4.0.991537</Version>
+    <PackageReference Include="Citrix.Xamarin.Android.MAMSDK">
+      <Version>20.11.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -106,7 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MvpnTestFormsApp\MvpnTestFormsApp.csproj">
-      <Project>{E616DF17-2CAD-43FF-A075-E4D67DA786A9}</Project>
+      <Project>{88E34EDA-A29E-402A-9E81-4115588855B0}</Project>
       <Name>MvpnTestFormsApp</Name>
     </ProjectReference>
   </ItemGroup>
