--- a/XamarinForms/MvpnTestFormsApp/MvpnTestFormsApp.csproj
+++ b/XamarinForms/MvpnTestFormsApp/MvpnTestFormsApp.csproj
@@ -6,11 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
-    <PackageReference Include="Citrix.Xamarin.Forms.MAMSDK" Version="21.6.0.4" />
-    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Citrix.Xamarin.Forms.MAMSDK" Version="23.1.1.*" />
   </ItemGroup>
 </Project>
-
